fix: handle refresh-token checks and lazy init issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.properties.hibernate.format_sql=true
 # JWT configuration
 app.jwt.secret=replace-with-secure-secret
 app.jwt.access-expiration-seconds=3600
+
+#debug security
+logging.level.org.springframework.security=DEBUG
