--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,13 @@
 spring.application.name=bookstorebackend
-
-# spring.datasource.url=jdbc:mysql://localhost:3306/bookstoreecommerce?useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Ho_Chi_Minh
-# spring.datasource.username=root
-# spring.datasource.password=123456
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.format_sql=true
-
-# # JWT configuration
-# app.jwt.secret=replace-with-secure-secret
-# app.jwt.access-expiration-seconds=3600
-
-# #debug security
-# logging.level.org.springframework.security=DEBUG
+spring.datasource.url=jdbc:mysql://localhost:3306/bookstoreecommerce?useUnicode=true&characterEncoding=utf8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Ho_Chi_Minh
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+# JWT configuration
+app.jwt.secret=replace-with-secure-secret
+app.jwt.access-expiration-seconds=3600
+#debug security
+logging.level.org.springframework.security=DEBUG
